app/assets/stylesheets/custom.css
/*Roboto styles*/
.bold600{
  font-weight: 600;
}

.bold500{
  font-weight: 500;
}

.bold400{
  font-weight: 400;
}

.bold300{
  font-weight: 300;
}

.light_italic{
  font-style: italic;
}

.thin{
  font-style: thin;
}

.smaller-fonts{
  font-size: .8em;
}

/*Button media queries*/
.btn {
  color: #fff;
  cursor: pointer;
  font-size:16px;
  font-weight: 400;
  line-height: 45px;
  margin: 0;
  position: relative;
  text-decoration: none;
  text-transform: uppercase;
  vertical-align: middle;

  @media(min-width: 400px) {
    display: inline-block;
    margin-right: 2.5em;

    &:nth-of-type(even) {
      margin-right: 0;
    }
  }

  @media(min-width: 600px) {

    &:nth-of-type(even) {
      margin-right: 2.5em;
    }

    &:nth-of-type(5) {
      margin-right: 0;
    }

  }

  &:hover { text-decoration: none; }

}

.btn-2 {
    letter-spacing: 0;
}

.btn-2:hover,
.btn-2:active {
  letter-spacing: 5px;
}

.btn-2:after,
.btn-2:before {
  backface-visibility: hidden;
  border: 1px solid rgba(#fff, 0);
  bottom: 0px;
  content: " ";
  display: block;
  margin: 0 auto;
  position: relative;
  transition: all 280ms ease-in-out;
  width: 0;
}

.btn-2:hover:after,
.btn-2:hover:before {
  backface-visibility: hidden;
  border-color: #fff;
  transition: width 350ms ease-in-out;
  width: 70%;
}

.btn-2:hover:before {
  bottom: auto;
  top: 0;
  width: 70%;
}

/*Other custom CSS*/

body{
  background-color: #2D3033;
}

nav ul a{
  color: #2D3033;
}

nav .brand-logo{
  color: #2D3033;
}

.wide-button .btn{
  width: 350px;
}

.repo-blue-color{
  background-color: #C3D7DF;
}

.display-in-line{
  display: inline-block;
}

.header-color{
  background-color: #EBEBEB;
  color: #2D3033;
}

.width90{
  width: 90%;
}

.width70{
  width: 70%;
}

.width60{
  width: 60%;
}

.width50{
  width: 50%;
}

.width40{
  width: 30%;
}

.width30{
  width: 30%;
}

.width20{
  width: 20%;
}

.width5{
  width: 5%;
}

.float-right{
  float: right;
}

.float-left{
  float: left;
}

.small-top-margin{
  margin-top: 7%;
}

.small-left-margin{
  margin-left: 3.5%;
}

.margin5{
  margin: 5%;
}


.medium-height{
  height: 120px;
}


.modal-content{
  width: 25%;
  display: inline-block;
  margin-right: 0;
}

.card.large {
  height:650px;
  border-radius: 20px;
}

.rounded-corners{
  border-radius: 20px;
}

.red-text{
  color: #c62828;
}

.pale-blue-text{
  color: #C3D7DF;
}

.label {
  display: inline;
  padding: .8em 1em .8em;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: .25em;
}

.custom-badge{
  display: inline-block;
  padding: 8px 14px;
  margin-bottom: 2px;
  font-size: 14px;
  line-height: 1.42857143;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -ms-touch-action: manipulation;
  touch-action: manipulation;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-image: none;
  border: 1px solid transparent;
  border-radius: 20px;
}

.custom-badge-style{
  color: #fff;
  background-color: #6EC2CF;
  border-color: #ccc;
}

.language-badge-style{
  color: #fff;
  background-color: #e91e63;
  border-color: #ccc;
}

.collapsible-body p {
  padding: 1rem 2rem;
}

.toast {
  border-radius: 2px;
  top: 0;
  width: auto;
  clear: both;
  margin-top: 10px;
  position: relative;
  box-shadow: none !important;
  max-width: 100%;
  height: 48px;
  line-height: 48px;
  background-color: transparent;
  padding: 0 25px;
  font-size: 1.1rem;
  font-weight: 300;
  color: #fff;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;

}

.modal-content{
  width: 90%;
}


#repo-header{
  margin: 3%;
  height: 100%
}

#repo-top-half{
  /*margin-top: 1%*/
  margin-bottom: 5%;
  height: 160px;
}

#stats-box-left{
 margin-left: 5%;
  margin-right: 0;
  margin-top: 1%;
  width: 30%;
  height: 85px;
}

#stats-box-right{
  margin-top: 3%;
  width: 60%;
}

#github_logo{
  width: 100px;
}

#modal-text{
  display: inline-block;
  float: right;
  width: 70%;
  margin-top: 5%;
  margin-right: 5%;
}

#login-alternate-link a:hover{
  color: #ff6d00;
}

#stats-box-question{
  margin-top: 5px;
}

